ProfileImage + edit images + register done

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
     </section>
     <section id="register" class="bg-fg main-padding">
         <h1 class="fc-cta margin-bottom">M'inscrire maintenant</h1>
-        {% include 'includes/register.html.twig' %}
+        {% include 'includes/userForm.html.twig' %}
     </section>
 </main>
 {% endblock %}
