--- a/templates/includes/userForm.html.twig
+++ b/templates/includes/userForm.html.twig
@@ -12,8 +12,9 @@
         {{ form_row(registrationForm.birthDate) }}
         {{ form_row(registrationForm.campus) }}
         {% if not is_granted('ROLE_USER') %}
+            {{ form_row(registrationForm.profileImage) }}
             {{ form_row(registrationForm.agreeTerms) }}
         {% endif %}
-    <button type="submit" class="btn bg-cta margin-top">{{ is_granted('ROLE_USER') ? 'Modifier' : 'Créer un compte' }}</button>
+        <button type="submit" class="btn bg-cta margin-top">{{ is_granted('ROLE_USER') ? 'Modifier' : 'Créer un compte' }}</button>
     </fieldset>
 {{ form_end(registrationForm) }}
